Build for OS X too

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ build:
     script:
     - "env GOOS=linux GOARCH=amd64 go build -o shitler_amd64 maunium.net/go/shitler-cli"
     - "env GOOS=linux GOARCH=arm go build -o shitler_arm maunium.net/go/shitler-cli"
+    - "env GOOS=darwin GOARCH=amd64 go build -o shitler_osx maunium.net/go/shitler-cli"
     - "env GOOS=windows GOARCH=amd64 go build -o shitler.exe maunium.net/go/shitler-cli"
     stage: build
     tags:
@@ -18,6 +19,7 @@ build:
         paths:
         - shitler_amd64
         - shitler_arm
+        - shitler_osx
         - shitler.exe
         - LICENSE
         - README.md
